--- a/Travel Safety/Modals/InfoViewController.xib
+++ b/Travel Safety/Modals/InfoViewController.xib
@@ -16,14 +16,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hello, world" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ULo-EV-m5k">
-                    <rect key="frame" x="116.5" y="229.5" width="87.5" height="20.5"/>
+                    <rect key="frame" x="116" y="229" width="87.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNu-TA-70N">
+                    <rect key="frame" x="96.5" y="10" width="127" height="26.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="BNu-TA-70N" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="H9j-ve-yeJ"/>
+                <constraint firstItem="BNu-TA-70N" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OWO-CL-Nuj"/>
                 <constraint firstItem="ULo-EV-m5k" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="hkx-Hk-dCD"/>
                 <constraint firstItem="ULo-EV-m5k" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="otG-eR-QdG"/>
             </constraints>
